--- a/stylesheets/scss/modules/_site-main.scss
+++ b/stylesheets/scss/modules/_site-main.scss
@@ -1,5 +1,5 @@
 .site-main {
-  overflow: hidden;
+  min-width: 0;
   grid-column: 1 / span 2;
 
   @media screen and (min-width: 1024px) {
